Need to fix overlap in header and smooth out rough transitions.

--- a/css/main.css
+++ b/css/main.css
@@ -40,53 +40,69 @@ Dark Grey: #5d614e
     flex-wrap: wrap;
 }
 
-.col-1 {
-    width: 8.33%;
+/* TODO Fix rough transitions and col-6 overlap in header */
+
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
+  width: 100%;
 }
 
-.col-2 {
-    width: 16.66%;
-}
-
-.col-3 {
-    width: 25%;
-}
-
-.col-4 {
-    width: 33.33%;
-}
-
-.col-5 {
-    width: 41.66%;
-}
-
-.col-6 {
+@media screen and (min-width: 600px) {
+  .col-4 {
     width: 50%;
+  }
 }
 
-.col-7 {
+@media screen and (min-width: 1200px) {
+  .col-1 {
+    width: 8.33%;
+  }
+
+  .col-2 {
+    width: 16.66%;
+  }
+
+  .col-3 {
+    width: 25%;
+  }
+
+  .col-4 {
+    width: 33.33%;
+  }
+
+  .col-5 {
+    width: 41.66%;
+  }
+
+  .col-6 {
+    width: 50%;
+  }
+
+  .col-7 {
     width: 58.33%;
-}
+  }
 
-.col-8 {
+  .col-8 {
     width: 66.66%;
-}
+  }
 
-.col-9 {
+  .col-9 {
     width: 75%;
-}
+  }
 
-.col-10 {
+  .col-10 {
     width: 83.33%;
-}
+  }
 
-.col-11 {
+  .col-11 {
     width: 91.66%;
+  }
+
+  .col-12 {
+    width: 100%;
+  }
 }
 
-.col-12 {
-    width: 100%;
-}
+
 
 /* Styles */
 img {
@@ -107,7 +123,7 @@ a:visited {
 }
 
 a:hover {
-  color: #ffa61d;
+  color: #f8c76e;
 }
 
 a:active {
@@ -162,3 +178,6 @@ h4 {
 header {
   border-bottom: solid #5d614e;
 }
+
+
+
